--- a/Abstract.tex
+++ b/Abstract.tex
@@ -87,9 +87,13 @@
 \hspace{1.8in} 
 \textbf{Course Instructor:} Vaishnavi T \\
 \textbf{Team Members:} \\
-\textbf{1.} Pratham N, MT034, 6363583848, prathamn452001@gmail.com 
+\textbf{1.} Pratham N, 191MT034, 6363583848, prathamn452001@gmail.com 
 \newline
-\textbf{2.} Saransh Bhaduka, ME252, 8696966881, saranshbhaduka111@gmail.com
+\textbf{2.} Saransh Bhaduka, 191ME252, 8696966881, saranshbhaduka111@gmail.com
+\newline
+\textbf{3.} Sumanth N Hegde, 191ME284, 7019468097, mnphah@gmail.com
+\newline
+\textbf{4.} Prasanna Sarkar, 191MT033, 9472839780, sarkarprasanna2u@gmail.com
 
 \vspace{0.25in}
 
