--- a/Abstract.tex
+++ b/Abstract.tex
@@ -110,6 +110,7 @@ Write your 250 words brief description about your mini-project topic here.
     \item Renting cars
     \item Printing invoice based on duration
     \item User Profile Display
+    \item Returning the cars
     \item Feedback/rating facility
 \end{enumerate}
 
