--- a/Abstract.tex
+++ b/Abstract.tex
@@ -100,7 +100,10 @@
 \noindent
 \textbf{Brief Description:}
 \newline
-Write your 250 words brief description about your mini-project topic here.
+We have designed a car rental system which lets the users choose any specific car model to rent. It also allows the users to give their feedback and rating based on the his or her experience. 
+\newline
+\newline
+In this car rental system, the user can choose his desired car from a list of car models available. The user can then specify the number of days he will be using it for, and whether he will be needing a driver or not. The program will then calculate the fee which the user will be urged to pay by visiting a website (for obvious reasons website is non-functional). 
 
 \noindent
 \textbf{Key Features:}
