--- a/Abstract.tex
+++ b/Abstract.tex
@@ -103,7 +103,7 @@
 We have designed a car rental system which lets the users choose any specific car model to rent. It also allows the users to give their feedback and rating based on the his or her experience. 
 \newline
 \newline
-In this car rental system, the user can choose his desired car from a list of car models available. The user can then specify the number of days he will be using it for, and whether he will be needing a driver or not. The program will then calculate the fee which the user will be urged to pay by visiting a website (for obvious reasons website is non-functional). 
+In this car rental system, the user can choose his desired car from a list of car models available. The user can then specify the number of days he will be using it for, and whether he will be needing a driver or not. The program will then calculate the fee which the user will be urged to pay by visiting a website (for obvious reasons website is non-functional). The rented car will then be added to the user profile, which the user can view anytime he wants to do so. The user can also give his own feedback as to how the service can be improved and also can give a star based rating on how his or her experience was. This whole project was developed using C programming language and various concepts and features such as file handling, structures etc. were utilized. This program is easy to operate and will be easily understood by the users.
 
 \noindent
 \textbf{Key Features:}
