--- a/Abstract.tex
+++ b/Abstract.tex
@@ -120,8 +120,8 @@ In this car rental system, the user can choose his desired car from a list of ca
 \noindent
 \textbf{References:}
 \begin{enumerate}
-    \item http://services.lovelycoding.org/hotel-management-system/
-    \item https://1000projects.org/hotel-management-system-project.html
+    \item https://code-projects.org/car-rental-system-in-c-with-source-code/
+    \item https://www.geeksforgeeks.org/basics-file-handling-c/
 \end{enumerate}
 
 
